--- a/Admin/admin/package.json
+++ b/Admin/admin/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
-    "bootstrap": "^4.6.0",
+    "angular-notifier": "^9.0.1",
+    "bootstrap": "^4.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
