--- a/Admin/admin/package.json
+++ b/Admin/admin/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.3",
     "angular-notifier": "^9.0.1",
     "bootstrap": "^4.0.0",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
