Product create finised

--- a/Back/FinalProjectAPI/FinalProjectAPI.csproj
+++ b/Back/FinalProjectAPI/FinalProjectAPI.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\DataService\DataService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
 </Project>
