--- a/Front/final-project/package.json
+++ b/Front/final-project/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.0.0-beta3",
     "ng5-slider": "^1.2.6",
     "ngx-owl-carousel-o": "^5.0.0",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
